OO-1970 fix overlapping visiting card logos

--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -243,7 +243,7 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_upload:before { content: $fa-var-upload; }
 .o_icon_version:before { content: $fa-var-history;}
 .o_icon_video:before { content: $fa-var-film; }
-.o_icon_waiting:before { content: $fa-var-clock-o; }
+.o_icon_visitingcard.o_icon_waiting:before { content: $fa-var-clock-o; }
 .o_icon_warn:before { content: $fa-var-exclamation-triangle; color: $brand-warning;}
 .o_icon_wizard:before { content: $fa-var-magic; }
 .o_icon_xing:before { content: $fa-var-xing; color: #cfdc00;}
